Sully Chen's model

--- a/carnd-projects/CarND-Behavioral-Cloning/behavioral-cloning.ipynb
+++ b/carnd-projects/CarND-Behavioral-Cloning/behavioral-cloning.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -30,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -136,36 +128,20 @@
     "def simple_conv():\n",
     "    model = Sequential()\n",
     "    \n",
-    "    model.add(Convolution2D(24, 5, 5, input_shape=(160, 320, 3)))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Convolution2D(36, 5, 5))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Convolution2D(48, 5, 5))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Convolution2D(64, 5, 5))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Convolution2D(64, 5, 5))\n",
-    "    model.add(Activation('relu'))\n",
+    "    model.add(Convolution2D(24, 5, 5, subsample=(2, 2), input_shape=(160, 320, 3),\n",
+    "                            activation='relu'))\n",
+    "    model.add(Convolution2D(36, 5, 5, subsample=(2, 2), activation='relu'))\n",
+    "    model.add(Convolution2D(48, 5, 5, subsample=(2, 2), activation='relu'))\n",
+    "    \n",
+    "    model.add(Convolution2D(64, 5, 5, activation='relu'))\n",
+    "    model.add(Convolution2D(64, 5, 5, activation='relu'))\n",
     "\n",
     "    model.add(Flatten())\n",
-    "    model.add(Dense(1164))\n",
-    "    model.add(Activation('relu'))\n",
-    "    \n",
-    "    model.add(Dense(100))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Dense(50))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Dense(10))\n",
-    "    model.add(Activation('relu'))\n",
-    "\n",
-    "    model.add(Dense(1))\n",
-    "    model.add(Activation('tanh'))\n",
+    "    model.add(Dense(1164, activation='relu'))    \n",
+    "    model.add(Dense(100, activation='relu'))\n",
+    "    model.add(Dense(50, activation='relu'))\n",
+    "    model.add(Dense(10, activation='relu'))\n",
+    "    model.add(Dense(1, activation='tanh'))\n",
     "\n",
     "    model.compile(optimizer='adam', loss='mean_squared_error')\n",
     "\n",
@@ -174,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -186,50 +162,30 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "convolution2d_1 (Convolution2D)  (None, 156, 316, 24)  1824        convolution2d_input_1[0][0]      \n",
+      "convolution2d_6 (Convolution2D)  (None, 78, 158, 24)   1824        convolution2d_input_2[0][0]      \n",
       "____________________________________________________________________________________________________\n",
-      "activation_1 (Activation)        (None, 156, 316, 24)  0           convolution2d_1[0][0]            \n",
+      "convolution2d_7 (Convolution2D)  (None, 37, 77, 36)    21636       convolution2d_6[0][0]            \n",
       "____________________________________________________________________________________________________\n",
-      "convolution2d_2 (Convolution2D)  (None, 152, 312, 36)  21636       activation_1[0][0]               \n",
+      "convolution2d_8 (Convolution2D)  (None, 17, 37, 48)    43248       convolution2d_7[0][0]            \n",
       "____________________________________________________________________________________________________\n",
-      "activation_2 (Activation)        (None, 152, 312, 36)  0           convolution2d_2[0][0]            \n",
+      "convolution2d_9 (Convolution2D)  (None, 13, 33, 64)    76864       convolution2d_8[0][0]            \n",
       "____________________________________________________________________________________________________\n",
-      "convolution2d_3 (Convolution2D)  (None, 148, 308, 48)  43248       activation_2[0][0]               \n",
+      "convolution2d_10 (Convolution2D) (None, 9, 29, 64)     102464      convolution2d_9[0][0]            \n",
       "____________________________________________________________________________________________________\n",
-      "activation_3 (Activation)        (None, 148, 308, 48)  0           convolution2d_3[0][0]            \n",
+      "flatten_2 (Flatten)              (None, 16704)         0           convolution2d_10[0][0]           \n",
       "____________________________________________________________________________________________________\n",
-      "convolution2d_4 (Convolution2D)  (None, 144, 304, 64)  76864       activation_3[0][0]               \n",
+      "dense_6 (Dense)                  (None, 1164)          19444620    flatten_2[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
-      "activation_4 (Activation)        (None, 144, 304, 64)  0           convolution2d_4[0][0]            \n",
+      "dense_7 (Dense)                  (None, 100)           116500      dense_6[0][0]                    \n",
       "____________________________________________________________________________________________________\n",
-      "convolution2d_5 (Convolution2D)  (None, 140, 300, 64)  102464      activation_4[0][0]               \n",
+      "dense_8 (Dense)                  (None, 50)            5050        dense_7[0][0]                    \n",
       "____________________________________________________________________________________________________\n",
-      "activation_5 (Activation)        (None, 140, 300, 64)  0           convolution2d_5[0][0]            \n",
+      "dense_9 (Dense)                  (None, 10)            510         dense_8[0][0]                    \n",
       "____________________________________________________________________________________________________\n",
-      "flatten_1 (Flatten)              (None, 2688000)       0           activation_5[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                  (None, 1164)          3128833164  flatten_1[0][0]                  \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_6 (Activation)        (None, 1164)          0           dense_1[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (None, 100)           116500      activation_6[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_7 (Activation)        (None, 100)           0           dense_2[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (None, 50)            5050        activation_7[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_8 (Activation)        (None, 50)            0           dense_3[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                  (None, 10)            510         activation_8[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_9 (Activation)        (None, 10)            0           dense_4[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                  (None, 1)             11          activation_9[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_10 (Activation)       (None, 1)             0           dense_5[0][0]                    \n",
+      "dense_10 (Dense)                 (None, 1)             11          dense_9[0][0]                    \n",
       "====================================================================================================\n",
-      "Total params: 3,129,201,271\n",
-      "Trainable params: 3,129,201,271\n",
+      "Total params: 19,812,727\n",
+      "Trainable params: 19,812,727\n",
       "Non-trainable params: 0\n",
       "____________________________________________________________________________________________________\n"
      ]
@@ -242,16 +198,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting training\n"
+      "Starting training\n",
+      "Steps 0 train loss 0.969635 validation loss 1.024164 time taken 3.2s\n",
+      "Steps 1 train loss 1.035814 validation loss 1.024164 time taken 1.5s\n",
+      "Steps 2 train loss 1.002649 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 3 train loss 1.057691 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 4 train loss 0.998042 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 5 train loss 0.992412 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 6 train loss 1.052887 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 7 train loss 1.040333 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 8 train loss 1.075663 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 9 train loss 1.004695 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 10 train loss 1.065208 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 11 train loss 1.021016 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 12 train loss 1.026931 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 13 train loss 1.031902 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 14 train loss 0.992965 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 15 train loss 0.981134 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 16 train loss 0.993092 validation loss 1.024164 time taken 1.2s\n",
+      "Steps 17 train loss 1.052645 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 18 train loss 0.989990 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 19 train loss 1.007327 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 20 train loss 1.021325 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 21 train loss 1.000921 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 22 train loss 1.018733 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 23 train loss 1.047818 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 24 train loss 1.022918 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 25 train loss 1.071836 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 26 train loss 1.044165 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 27 train loss 1.062765 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 28 train loss 1.069869 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 29 train loss 1.079278 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 30 train loss 1.036036 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 31 train loss 0.980531 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 32 train loss 1.099764 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 33 train loss 0.947596 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 34 train loss 1.016819 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 35 train loss 1.008740 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 36 train loss 0.983844 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 37 train loss 0.948677 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 38 train loss 1.009884 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 39 train loss 0.997367 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 40 train loss 0.976375 validation loss 1.024164 time taken 1.2s\n",
+      "Steps 41 train loss 1.051511 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 42 train loss 1.060996 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 43 train loss 1.038965 validation loss 1.024164 time taken 1.4s\n",
+      "Steps 44 train loss 0.979195 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 45 train loss 1.016377 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 46 train loss 1.065272 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 47 train loss 1.002997 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 48 train loss 1.057220 validation loss 1.024164 time taken 1.3s\n",
+      "Steps 49 train loss 1.055715 validation loss 1.024164 time taken 1.3s\n"
      ]
     }
    ],
@@ -263,7 +270,7 @@
     "val_x, val_y = dh.val_data()\n",
     "\n",
     "print(\"Starting training\")\n",
-    "for steps in range(EPOCHS * DATA_SIZE):\n",
+    "for steps in range(50):\n",
     "    step_start = time.time()\n",
     "    cur_epoch = steps / DATA_SIZE\n",
     "    x, y = dh.next_train_batch(BATCH_SIZE)\n",
@@ -272,11 +279,33 @@
     "    val_loss = model.evaluate(val_x, val_y, verbose=0)\n",
     "    \n",
     "    time_taken = time.time() - step_start\n",
-    "    print(\"Steps {} train loss {} validation loss {} time taken {}\".format(\n",
+    "    print(\"Steps {} train loss {:0.6f} validation loss {:0.6f} time taken {:0.1f}s\".format(\n",
     "            steps, train_loss, val_loss, time_taken))\n",
     "    \n",
-    "    print(\"Saving model\")\n",
     "    model.save(\"model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1. -1. -1. -1. -1. -1. -1. -1. -1. -1.]\n",
+      "['0' '-0.3445879' '-0.2876218' '0' '0.3583844' '0.1765823' '0' '0' '0'\n",
+      " '-0.05975719']\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(val_x[:10])\n",
+    "print(y_pred.reshape(10))\n",
+    "print(val_y[:10])"
    ]
   },
   {
@@ -292,9 +321,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:sdcnd]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-sdcnd-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
