--- a/carnd-projects/CarND-Vehicle-Detection/writeup.ipynb
+++ b/carnd-projects/CarND-Vehicle-Detection/writeup.ipynb
@@ -821,8 +821,8 @@
     "\n",
     "1. Provide a link to your final video output.\n",
     "\n",
-    "    - [test_video.mp4](/test_video_out.mp4)\n",
-    "    - [project_video.mp4](/project_video_out.mp4)\n",
+    "    - [test_video.mp4](./test_video_out.mp4)\n",
+    "    - [project_video.mp4](https://github.com/cssomnath/udacity-sdc/blob/master/carnd-projects/CarND-Vehicle-Detection/project_video_out.mp4)\n",
     "\n",
     "2. Describe how you implemented some kind of filter for false positives and some method for combining overlapping bounding boxes.\n",
     "\n",
